tests/NormalTests/paczka2/big_fuzzy/41988632.err
Error in line 1: ZG5 S313 58,7
Error in line 7: TAJOXRYc67G S610 30,8
Error in line 12: ah6JZOVS8 S378 82,3
Error in line 20: S936 S936 72,5
Error in line 22: 4b3Ny S378 74,1
Error in line 38: ah6JZOVS8 S610 95,2
Error in line 39: 4b3Ny S313 235,7
Error in line 24: S936 S378 14,1
Error in line 49: TAJOXRYc67G S610 41,5
Error in line 62: TAJOXRYc67G S378 52,7
Error in line 72: k9xHRdbVQAG S313 17,0
Error in line 76: ah6JZOVS8 S378 92,3
Error in line 82: k9xHRdbVQAG S313 1,0
Error in line 83: k9xHRdbVQAG S378 50,6
Error in line 95: S936 S936 1,6
Error in line 104: ah6JZOVS8 S936 40,1
Error in line 98: epDa S313 71,2
Error in line 116: S936 S610 61,9
Error in line 133: ZG5 S3k3 36,0
Error in line 138: k9xHRdbVQAG S936 11,6
Error in line 122: ZG5 S378 21,4
Error in line 143: ZG5 S313 82,4
Error in line 146: ah6JZOVS8 S610 93,63
Error in line 139: 4b3Ny S610 138,3
Error in line 159: 4b3Ny S313 356,2
Error in line 157: TAJOXRYc67G S313 27,5
Error in line 161: TAJOXRYc67G S936 91,5
Error in line 165: ZG5 S378 -1,2
Error in line 134: ah6JZOVS8 S610 21,8
Error in line 158: ZG5 S378 83,4
Error in line 181: k9xHRdbVQAG S610 79,4
Error in line 189: S936 S610 16,7
Error in line 188: k9xHRdbVQAG S313 62,7
Error in line 196: S936 S313 162,8
Error in line 209: TAJOXRYc67G S610 50,3
Error in line 210: S936 S610 85,0
Error in line 213: k9xHRdbVQAG S610 44,8
Error in line 216: TAJOXRYc67G S378 13,0
Error in line 218: S936 S378 94,2
Error in line 221: TAJOXRYc67G S610 67,8
Error in line 237: TAJOXRYc67G S313 64,8
